--- a/config_example.json
+++ b/config_example.json
@@ -12,7 +12,7 @@
       "algo": "rx/0",
       "algo_perf": { "rx/0": 1, "rx/loki": 1 },
       "blob_type": "cryptonote",
-      "default": false
+      "default": true
     }
   ],
   "listeningPorts": [
